--- a/data/darktableconfig.xml.in
+++ b/data/darktableconfig.xml.in
@@ -1,12 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE dtconfiglist SYSTEM "darktableconfig.dtd">
 <dtconfiglist>
-  <dtconfig>
-    <name>themes/usercss</name>
-    <type>bool</type>
-    <default>true</default>
-    <shortdescription>modify theme with user tweaks</shortdescription>
-  </dtconfig>
   <dtconfig prefs="misc" section="accel">
     <name>accel/prefer_expanded</name>
     <type>bool</type>
@@ -146,7 +140,7 @@
     <default>true</default>
     <shortdescription>do not show april 1st game</shortdescription>
   </dtconfig>
-  <dtconfig prefs="cpugpu" restart="true">
+  <dtconfig prefs="cpugpu">
     <name>cache_memory</name>
     <type factor="(1.0 / (1024.0 * 1024.0))" min="(1024 * 1024 * 100)">int64</type>
     <default>(1024 * 1024 * 512)</default>
@@ -174,21 +168,21 @@
     <shortdescription>color manage cached thumbnails</shortdescription>
     <longdescription>if enabled, cached thumbnails will be color managed so that lighttable and filmstrip can show correct colors. otherwise the results may look wrong once the display profile gets changed.</longdescription>
   </dtconfig>
-  <dtconfig prefs="cpugpu" restart="true">
+  <dtconfig prefs="cpugpu">
     <name>worker_threads</name>
-    <type min="1" max="64">int</type>
+    <type>int</type>
     <default>2</default>
     <shortdescription>number of background threads</shortdescription>
     <longdescription>this controls for example how many threads are used to create thumbnails during import. the cache will grow to a maximum of twice this number of full resolution image buffers (needs a restart).</longdescription>
   </dtconfig>
-  <dtconfig prefs="cpugpu" restart="true">
+  <dtconfig prefs="cpugpu">
     <name>host_memory_limit</name>
     <type>int</type>
     <default>1500</default>
     <shortdescription>host memory limit (in MB) for tiling</shortdescription>
     <longdescription>this variable controls the maximum amount of memory (in MB) a module may use during image processing. lower values will force memory hungry modules to process image with increasing number of tiles. setting this to 0 will omit any limit. values below 500 will be treated as 500 (needs a restart).</longdescription>
   </dtconfig>
-  <dtconfig prefs="cpugpu" restart="true">
+  <dtconfig prefs="cpugpu">
     <name>singlebuffer_limit</name>
     <type min="2" max="64">int</type>
     <default>16</default>
@@ -313,7 +307,7 @@
     <shortdescription>omit hierarchy in simple tag lists</shortdescription>
     <longdescription>when creating XMP file the hierarchical tags are also added as a simple list of non-hierarchical ones to make them visible to some other programs. when this option is checked darktable will only include their last part and ignore the rest. so 'foo|bar|baz' will only add 'baz'.</longdescription>
   </dtconfig>
-  <dtconfig prefs="misc" section="tags" restart="true">
+  <dtconfig prefs="misc" section="tags">
     <name>plugins/lighttable/tagging/no_entry_completion</name>
     <type>bool</type>
     <default>false</default>
@@ -392,15 +386,8 @@
     <name>ask_before_delete</name>
     <type>bool</type>
     <default>true</default>
-    <shortdescription>ask before erasing images from disk</shortdescription>
-    <longdescription>always ask the user before any image file is deleted</longdescription>
-  </dtconfig>
-  <dtconfig prefs="security">
-    <name>ask_before_discard</name>
-    <type>bool</type>
-    <default>true</default>
-    <shortdescription>ask before discarding history stack</shortdescription>
-    <longdescription>always ask the user before history stack is discarded on any image</longdescription>
+    <shortdescription>ask before erasing images from disk / discarding history stack</shortdescription>
+    <longdescription>always ask the user before any image file is deleted / history stack is discarded.</longdescription>
   </dtconfig>
   <dtconfig prefs="security">
     <name>send_to_trash</name>
@@ -487,7 +474,7 @@
     <longdescription/>
   </dtconfig>
   <dtconfig>
-    <name>plugins/session/jobcode</name>
+    <name>plugins/capture/jobcode</name>
     <type>string</type>
     <default>capture job</default>
     <shortdescription>name of capture job</shortdescription>
@@ -520,13 +507,6 @@
     <default>noname</default>
     <shortdescription>jobcode of import job</shortdescription>
     <longdescription/>
-  </dtconfig>
-  <dtconfig>
-    <name>plugins/capture/camera/live_view_fps</name>
-    <type>int</type>
-    <default>15</default>
-    <shortdescription>maximum fps of live view update in tethering view</shortdescription>
-    <longdescription>going too fast will result in too many redraws without a real benefit</longdescription>
   </dtconfig>
   <dtconfig prefs="lighttable">
     <name>plugins/collect/filmroll_sort</name>
@@ -968,8 +948,8 @@
     <name>plugins/darkroom/image_infos_pattern</name>
     <type>longstring</type>
     <default>$(EXIF_EXPOSURE) • f/$(EXIF_APERTURE) • $(EXIF_FOCAL_LENGTH) mm • $(EXIF_ISO) ISO</default>
-    <shortdescription>pattern for the image information line</shortdescription>
-    <longdescription>see manual for a list of the tags you can use.</longdescription>
+    <shortdescription>pattern for the image infos line</shortdescription>
+    <longdescription>see manual to know all the tags you can use.</longdescription>
   </dtconfig>
   <dtconfig prefs="darkroom">
     <name>plugins/darkroom/image_infos_position</name>
@@ -983,7 +963,7 @@
       </enum>
     </type>
     <default>bottom</default>
-    <shortdescription>position of the image information line</shortdescription>
+    <shortdescription>position of the image infos line</shortdescription>
     <longdescription/>
   </dtconfig>
   <dtconfig prefs="darkroom" restart="true">
@@ -1495,6 +1475,13 @@
     <longdescription/>
   </dtconfig>
   <dtconfig prefs="otherviews" section="geoloc">
+    <name>plugins/map/filter_images_drawn</name>
+    <type>bool</type>
+    <default>FALSE</default>
+    <shortdescription>only draw images on map that are currently collected and filtered</shortdescription>
+    <longdescription>use the current filter settings to select the geotagged images drawn on the map, i.e. limit the images drawn to the current filmstrip. this limits the number of images drawn and thus reduces the time needed to draw the images.</longdescription>
+  </dtconfig>
+  <dtconfig prefs="otherviews" section="geoloc">
     <name>plugins/map/max_images_drawn</name>
     <type>int</type>
     <default>100</default>
@@ -1634,7 +1621,7 @@
     <shortdescription>show scrollbars for central view</shortdescription>
     <longdescription>defines whether scrollbars should be displayed</longdescription>
   </dtconfig>
-  <dtconfig prefs="misc" section="interface" restart="true">
+  <dtconfig prefs="misc" section="interface">
     <name>panel_scrollbars_always_visible</name>
     <type>bool</type>
     <default>true</default>
@@ -1707,7 +1694,7 @@
  <dtconfig prefs="lighttable">
     <name>lighttable/ui/scrollbars</name>
     <type>bool</type>
-    <default>true</default>
+    <default>false</default>
     <shortdescription>show scrollbars for central view</shortdescription>
     <longdescription>defines whether scrollbars should be displayed</longdescription>
   </dtconfig>
@@ -1742,14 +1729,14 @@
   <dtconfig>
     <name>darkroom/ui/overexposed/lower</name>
     <type>float</type>
-    <default>-12.69</default>
+    <default>2.0</default>
     <shortdescription/>
     <longdescription/>
   </dtconfig>
   <dtconfig>
     <name>darkroom/ui/overexposed/upper</name>
     <type>float</type>
-    <default>99.99</default>
+    <default>98.0</default>
     <shortdescription/>
     <longdescription/>
   </dtconfig>
@@ -1778,7 +1765,7 @@
     </type>
     <default>at most PPG (reasonable)</default>
     <shortdescription>demosaicing for zoomed out darkroom mode</shortdescription>
-    <longdescription>interpolation when not viewing 1:1 in darkroom mode: bilinear is fastest, but not as sharp. middle ground is using PPG + interpolation modes specified on the 'pixel interpolator' option (processing tab), full will use exactly the settings for full-size export. X-Trans sensors use VNG rather than PPG as middle ground.</longdescription>
+    <longdescription>interpolation when not viewing 1:1 in darkroom mode: bilinear is fastest, but not as sharp. middle ground is using PPG + interpolation modes specified below, full will use exactly the settings for full-size export. X-Trans sensors use VNG rather than PPG as middle ground.</longdescription>
   </dtconfig>
   <dtconfig prefs="darkroom" >
     <name>preview_downsampling</name>
@@ -2340,7 +2327,7 @@
     <shortdescription>executable for playing audio files</shortdescription>
     <longdescription>this external program is used to play audio files some cameras record to keep notes for images</longdescription>
   </dtconfig>
-  <dtconfig prefs="processing" restart="true">
+  <dtconfig prefs="processing">
     <name>plugins/darkroom/lut3d/def_path</name>
     <type>dir</type>
     <default></default>
@@ -2358,16 +2345,16 @@
     </type>
     <default>display-referred</default>
     <shortdescription>auto-apply pixel workflow defaults</shortdescription>
-    <longdescription>scene-referred workflow is based on linear modules and will auto-apply filmic and exposure,\ndisplay-referred workflow is based on Lab modules and will auto-apply base curve and the legacy module pipe order.</longdescription>
+    <longdescription>scene-referred workflow is based on linear modules and will auto-apply filmic and exposure,\ndisplay-referred workflow is based on Lab modules and will auto-apply base curve and the legacy module pipe order.\n(needs a restart)</longdescription>
   </dtconfig>
-  <dtconfig prefs="processing" restart="true">
+  <dtconfig prefs="processing">
     <name>plugins/darkroom/basecurve/auto_apply_percamera_presets</name>
     <type>bool</type>
     <default>false</default>
     <shortdescription>auto-apply per camera basecurve presets</shortdescription>
-    <longdescription>use the per-camera basecurve by default instead of the generic manufacturer one if there is one available (needs a restart).\nthis option is taken into account when the \"auto-apply pixel workflow defaults\" is set to \"display-referred\".\nto prevent auto-apply basecurve presets \"auto-apply pixel workflow defaults\" should be set to \"none\"</longdescription>
+    <longdescription>use the per-camera basecurve by default instead of the generic manufacturer one if there is one available (needs a restart).\nthis option is taken into account when the \"auto-apply pixel workflow defaults\" is set to \"none\"</longdescription>
   </dtconfig>
-  <dtconfig prefs="processing" restart="true">
+  <dtconfig prefs="processing">
     <name>plugins/darkroom/sharpen/auto_apply</name>
     <type>bool</type>
     <default>true</default>
@@ -2442,64 +2429,6 @@
     <default>https://nominatim.openstreetmap.org/search/%s?format=xml&amp;limit=%d&amp;polygon_text=1</default>
     <shortdescription>Geotagging search URL</shortdescription>
     <longdescription>this can be changed when the default OpenStreetMap search URL is broken</longdescription>
-  </dtconfig>
-  <dtconfig prefs="darkroom" section="interface">
-    <name>plugins/darkroom/temperature/colored_sliders</name>
-    <type>
-      <enum>
-        <option>no color</option>
-        <option>illuminant color</option>
-        <option>effect emulation</option>
-      </enum>
-    </type>
-    <default>no color</default>
-    <shortdescription>white balance slider colors</shortdescription>
-    <longdescription>visual indication of temperature adjustments.\nin 'illuminant color' mode slider colors represent the color of the light source,\nin 'effect emulation' slider colors represent the effect the adjustment would have on the scene</longdescription>
-  </dtconfig>
-  <dtconfig>
-    <name>plugins/darkroom/temperature/expand_coefficients</name>
-    <type>bool</type>
-    <default>false</default>
-    <shortdescription>whether to show coefficients</shortdescription>
-    <longdescription>this is just for remembering whether to show coefficients or not and remember it</longdescription>
-  </dtconfig>
-  <dtconfig>
-    <name>plugins/darkroom/temperature/button_bar</name>
-    <type>bool</type>
-    <default>true</default>
-    <shortdescription>arange buttons as bar below temp/tint sliders</shortdescription>
-    <longdescription>if enabled, the buttons in white balance module will be aranged below temp/tint sliders, otherwise they'll be shown in a grid to the right of temp/tint sliders</longdescription>
-  </dtconfig>
-  <dtconfig prefs="darkroom" section="interface">
-    <name>plugins/darkroom/colorbalance/layout</name>
-    <type>
-      <enum>
-        <option>list</option>
-        <option>tabs</option>
-        <option>columns</option>
-      </enum>
-    </type>
-    <default>list</default>
-    <shortdescription>colorbalance slider block layout</shortdescription>
-    <longdescription>choose how to organise the slider blocks for lift, gamma and gain:\nlist - all sliders are shown in one long list (with headers),\ntabs - use tabs to switch between the blocks of sliders,\ncolumns - the blocks of sliders are shown next to each other (in narrow columns)</longdescription>
-  </dtconfig>
-  <dtconfig prefs="darkroom">
-    <name>darkroom/ui/hide_header_buttons</name>
-    <type>
-      <enum>
-        <option>always</option>
-        <option>active</option>
-        <option>dim</option>
-        <option>auto</option>
-        <option>fade</option>
-        <option>fit</option>
-        <option>smooth</option>
-        <option>glide</option>
-      </enum>
-    </type>
-    <default>always</default>
-    <shortdescription>show right-side buttons in darkroom module headers</shortdescription>
-    <longdescription>when the mouse is not over a module, the multi-instance, reset and preset buttons can be hidden:\nalways - always show all buttons,\nactive - only show the buttons when the mouse is over the module,\ndim - buttons are dimmed when mouse is away,\nauto - hide the buttons when the panel is narrow,\nfade - fade out all buttons when panel narrows,\nfit - hide all the buttons if the module name doesn't fit,\nsmooth - fade out all buttons in one header simultaneously,\nglide - gradually hide individual buttons as needed</longdescription>
   </dtconfig>
 
   @DARKTABLECONFIG_IOP_ENTRIES@
